Adding some animation support as well as final hardware files

--- a/firmware/source/config.json
+++ b/firmware/source/config.json
@@ -1,5 +1,5 @@
 {
-  "startupColor": "heart",
-  "heartbeatColor": "heart",
-  "sleepTimeout": 600
+  "startupColor": "white",
+  "flag": "puertorico",
+  "sleepTimeout": 300
 }
